--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -44,7 +44,7 @@ jobs:
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
       
-      - name: Main
+      - name: gh-pages
         run: |
           pwd
           chmod +x autorun.sh
