--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -9,7 +9,7 @@ on:
     
   pull_request:
     branches:
-      - gh-pages
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -44,7 +44,7 @@ jobs:
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
       
-      - name: gh-pages
+      - name: main
         run: |
           pwd
           chmod +x autorun.sh
