--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -43,7 +43,13 @@ jobs:
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
-      
+
+      - name: Set up Python
+        run: |
+          python3 -m venv path/to/venv
+          source path/to/venv/bin/activate
+          pip install requests
+          
       - name: main
         run: |
           pwd
