--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -49,7 +49,7 @@ jobs:
           python3 -m venv path/to/venv
           source path/to/venv/bin/activate
           brew install pipx
-          pip install requests
+          python3 -m pip install requests
 
       - name: main
         run: |
