--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -49,7 +49,7 @@ jobs:
           brew install pipx
           python3 -m venv path/to/venv
           source path/to/venv/bin/activate
-          python3 -m pip install requests
+          pip install requests
 
       - name: main
         run: |
