--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -44,18 +44,17 @@ jobs:
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
 
-      - name: Set up pipx
-        run: |
-          brew install pipx
-
       - name: Set up Python
         run: |
           python3 -m venv path/to/venv
-          source path/to/venv/bin/activate
+          echo "VIRTUAL_ENV=path/to/venv" >> $GITHUB_ENV
+          echo "PATH=path/to/venv/bin:$PATH" >> $GITHUB_ENV
 
-      - name: Set up requests
+      - name: Install requests
         run: |
-          python3 -m pip install requests
+          source path/to/venv/bin/activate
+          python3 -m pip install requests  # Install only the requests library
+
 
       - name: main
         run: |
