--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -49,6 +49,7 @@ jobs:
           python3 -m venv path/to/venv
           source path/to/venv/bin/activate
           python3 -m pip install requests
+          python3 -m pip install httpx
           pwd
           chmod +x autorun.sh
           ./autorun.sh
