--- a/.github/workflows/m3u_Generator.yml
+++ b/.github/workflows/m3u_Generator.yml
@@ -48,8 +48,7 @@ jobs:
         run: |
           python3 -m venv path/to/venv
           source path/to/venv/bin/activate
-          python3 -m pip install requests
-          python3 -m pip install httpx
+          python3 -m pip install aiohttp
           pwd
           chmod +x autorun.sh
           ./autorun.sh
